[package]
name = "hypr-cycle"
version = "0.3.0"
authors = ["Chris Dolan <aelien27@gmail.com>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/christopherdolan/hypr-cycle"
description = "A fast and monitor-aware workspace cycler for Hyprland, written in Rust."

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
hyprrust = { version = "0.2.0", features = ["sync"], default-features = false }

[dev-dependencies]
mockall = "0.14.0"
