[package]
name = "hypr-cycle"
version = "0.4.0"
authors = ["Christopher Dolan <siricandobhikkhu@gmail.com>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/christopherdolan/hypr-cycle"
description = "A fast and monitor-aware workspace cycler for Hyprland, written in Rust."
readme = "README.md"
keywords = ["hyprland"]

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
hyprrust = { version = "0.2.0", features = ["sync"], default-features = false }

[dev-dependencies]
mockall = "0.14.0"
