[package]
name = "hypr-cycle"
version = "0.4.2"
authors = ["Christopher Dolan <siricandobhikkhu@gmail.com>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/christopherdolan/hypr-cycle"
description = "A fast and monitor-aware workspace cycler for Hyprland, written in Rust."
readme = "README.md"
keywords = ["hyprland"]
exclude = [
  ".github/"
]

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
hyprrust = { version = "0.2.1", features = ["sync"], default-features = false }

[dev-dependencies]
mockall = "0.14.0"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
